--- a/homework/week-11.ipynb
+++ b/homework/week-11.ipynb
@@ -56,10 +56,10 @@
       "execution_count": 9,
       "metadata": {
         "id": "-dfq0Vo_iSi7",
-        "outputId": "f521a13f-3ab0-4893-e9b4-eabe923533c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f521a13f-3ab0-4893-e9b4-eabe923533c8"
       },
       "outputs": [
         {
@@ -133,11 +133,11 @@
       ],
       "metadata": {
         "id": "hT5B-LokmUbU",
-        "outputId": "9fcca120-e5e9-4a48-c570-b8119a5f3be9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "9fcca120-e5e9-4a48-c570-b8119a5f3be9"
       },
       "execution_count": 49,
       "outputs": [
@@ -180,29 +180,35 @@
     {
       "cell_type": "code",
       "source": [
-        "# answer goes here. Add space as needed.\n",
-        "\n",
         "Line 1.\n",
         "# Line one provides the code needed to define the function that will be newly created below.\n",
-        "# The function is named squarer and takes one postitonal argument, n.\n",
+        "# The function is named squarer and takes one postitonal integer argument, n. In this case,\n",
+        "# the positional argument is the value 2 for this function.\n",
         "\n",
         "Line 2.\n",
         "# This line indicates a particular circumstance within the function that will occur if the n value is equal to 1.\n",
         "# If n is equal to 1, the next line will run. Otherwise, it will go on to the else clause within this function.\n",
+        "# Since the n value originally put into the function was 2, the function will not execute this if statement and\n",
+        "# will go on the the else statement.\n",
         "\n",
         "Line 3.\n",
-        "# Line three states that if the n value provided is equal to 1, the function will return out the value 2.\n",
-        "# It is the end of the if-clause within this function if n is equal to 1.\n",
+        "# Line three states that if the n value provided within sqaurer() is equal to 1, the function will return out\n",
+        "# the value 2. It is the end of the if-clause within this function if n is equal to 1. Since the original\n",
+        "# value put into this function was 2, this function will not run the if statement and return a 2.\n",
         "\n",
         "Line 4.\n",
-        "# This line marks the beginning of the else clause within this function. If the n value is not equal to 1 at any point,\n",
-        "# the function will go to execute this part of the functions rather than the if-clause.\n",
+        "# This line marks the beginning of the else clause within this function. If the n value is not equal to 1 at any\n",
+        "# point, the function will go to execute this part of the functions rather than the if-clause. Since the original n\n",
+        "# value put into squarer(n) is 2, the function will run this else clause.\n",
         "\n",
         "Line 5.\n",
-        "# Line 5 states that if n is not equal to 1, the n value will be subtracted from 1 and this new value will be put\n",
-        "# back into the function to see if n is now equal to 1. This value will then be raised to the second power. Finally, the orignal n value\n",
-        "# will then be added to the result of what was squared. In this case, 2-1 = 1, making the n == 1. Putting this back into the orignal function squarer(),\n",
-        "# the value to be returned is 2. 2 is then raised to the second power, equaling 4. 4 plus the orignal n value put into this function, 2, equals 6.\n",
+        "# Line 5 states that if n is not equal to 1, the n value will be subtracted from 1 and this new value will be\n",
+        "# put back into the function to see if n is now equal to 1. This value will then be raised to the second power.\n",
+        "# Finally, the orignal n value will then be added to the result of what was squared.\n",
+        "# Since 2 was the original n value put into squarer(n), this else portion of the function will run.\n",
+        "# In this case, 2-1 = 1, making the n in squarer(n) now equal to 1. Putting this back into the orignal function\n",
+        "# squarer(), the value to be returned is 2. 2 is then raised to the second power, equaling 4. 4 plus the orignal\n",
+        "# n value put into this function, 2, equals 6.\n",
         "\n"
       ],
       "metadata": {
@@ -210,38 +216,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def squarer(n):\n",
-        "  if n == 1:\n",
-        "    return 2\n",
-        "  else:\n",
-        "    return squarer(n-1) ** 2 + n\n",
-        "\n",
-        "squarer(2)"
-      ],
-      "metadata": {
-        "id": "mfQ6RYFrkVVI",
-        "outputId": "b2b9aa2a-0773-4b9c-d3dc-1ba89777edc4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 56,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "6"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 56
-        }
-      ]
     }
   ]
 }
