--- a/homework/week-11.ipynb
+++ b/homework/week-11.ipynb
@@ -204,11 +204,11 @@
         "Line 5.\n",
         "# Line 5 states that if n is not equal to 1, the n value will be subtracted from 1 and this new value will be\n",
         "# put back into the function to see if n is now equal to 1. This value will then be raised to the second power.\n",
-        "# Finally, the orignal n value will then be added to the result of what was squared.\n",
+        "# Finally, the original n value will then be added to the result of what was squared.\n",
         "# Since 2 was the original n value put into squarer(n), this else portion of the function will run.\n",
-        "# In this case, 2-1 = 1, making the n in squarer(n) now equal to 1. Putting this back into the orignal function\n",
-        "# squarer(), the value to be returned is 2. 2 is then raised to the second power, equaling 4. 4 plus the orignal\n",
-        "# n value put into this function, 2, equals 6.\n",
+        "# In this case, 2-1 = 1, making the n in squarer(n) now equal to 1. Putting this back into the original function\n",
+        "# squarer(n), the value to be returned, per line 2, and further used within this else statement is 2.\n",
+        "# 2 is then raised to the second power, equaling 4. 4 plus the original n value put into this function, 2, equals 6.\n",
         "\n"
       ],
       "metadata": {
