--- a/homework/week-11.ipynb
+++ b/homework/week-11.ipynb
@@ -208,7 +208,8 @@
         "# Since 2 was the original n value put into squarer(n), this else portion of the function will run.\n",
         "# In this case, 2-1 = 1, making the n in squarer(n) now equal to 1. Putting this back into the original function\n",
         "# squarer(n), the value to be returned, per line 2, and further used within this else statement is 2.\n",
-        "# 2 is then raised to the second power, equaling 4. 4 plus the original n value put into this function, 2, equals 6.\n",
+        "# 2 is then raised to the second power, equaling 4. 4 plus the original n value put into this function, 2,\n",
+        "# equals 6.\n",
         "\n"
       ],
       "metadata": {
