--- a/homework/week-13.ipynb
+++ b/homework/week-13.ipynb
@@ -52,11 +52,11 @@
       "execution_count": 1,
       "metadata": {
         "id": "k03Z1NKAoZrW",
-        "outputId": "6f6c06eb-53cb-467c-a182-4726c7dfe4f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 285
-        }
+        },
+        "outputId": "6f6c06eb-53cb-467c-a182-4726c7dfe4f7"
       },
       "outputs": [
         {
@@ -101,6 +101,19 @@
     {
       "cell_type": "code",
       "source": [
+        "# I'm not sure if this is just the default but just in case: For all the vectors in this section and the next,\n",
+        "# but the vectors on Github look like a numbered list?\n",
+        "# On the colab notebook, it comes out as a regular vector so I just wanted to leave a note just in case."
+      ],
+      "metadata": {
+        "id": "jE9XM1LdRBOj"
+      },
+      "execution_count": 94,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# create a vector with 7 integer values. Assign it to a variable named \"my_integers\"\n",
         "my_integers <- c(3,7,71,49,12,8,33)"
       ],
@@ -139,11 +152,11 @@
       ],
       "metadata": {
         "id": "f3IFD-T6p6Rd",
-        "outputId": "112721d2-3bbc-4bdf-cadf-4a5a05d6baba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
-        }
+        },
+        "outputId": "112721d2-3bbc-4bdf-cadf-4a5a05d6baba"
       },
       "execution_count": 93,
       "outputs": [
@@ -239,11 +252,11 @@
       ],
       "metadata": {
         "id": "0D5Ia-BPsoPZ",
-        "outputId": "b1eefbc0-5538-426a-c1c7-efc6177a4cb6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "b1eefbc0-5538-426a-c1c7-efc6177a4cb6"
       },
       "execution_count": 42,
       "outputs": [
@@ -285,11 +298,11 @@
       ],
       "metadata": {
         "id": "MBg7V1LztQlv",
-        "outputId": "cd59618e-be04-4e69-8204-6af785199bef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "cd59618e-be04-4e69-8204-6af785199bef"
       },
       "execution_count": 43,
       "outputs": [
@@ -334,11 +347,11 @@
       ],
       "metadata": {
         "id": "y1k0NHNruFX2",
-        "outputId": "5fea7990-4986-4723-b863-488a216eecab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "5fea7990-4986-4723-b863-488a216eecab"
       },
       "execution_count": 44,
       "outputs": [
@@ -399,11 +412,11 @@
       ],
       "metadata": {
         "id": "V4nBsdVsyauQ",
-        "outputId": "cac6bfcc-ad7a-4cd6-e0c6-caa9b6263807",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 412
-        }
+        },
+        "outputId": "cac6bfcc-ad7a-4cd6-e0c6-caa9b6263807"
       },
       "execution_count": 90,
       "outputs": [
@@ -470,11 +483,11 @@
       ],
       "metadata": {
         "id": "OlmbfFi6zSgR",
-        "outputId": "b92f42d0-f815-462d-d9ba-17b9704ba83c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 192
-        }
+        },
+        "outputId": "b92f42d0-f815-462d-d9ba-17b9704ba83c"
       },
       "execution_count": 65,
       "outputs": [
@@ -516,11 +529,11 @@
       ],
       "metadata": {
         "id": "-l_kpWSzzlhG",
-        "outputId": "955c198a-2714-41d8-c03e-c86de20cb2b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 161
-        }
+        },
+        "outputId": "955c198a-2714-41d8-c03e-c86de20cb2b2"
       },
       "execution_count": 89,
       "outputs": [
@@ -588,12 +601,12 @@
         "head(starwars)"
       ],
       "metadata": {
-        "id": "wjCMGNsCJOov",
-        "outputId": "4a142a5d-99fb-4629-9f71-6acc3762a8bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 599
-        }
+        },
+        "id": "wjCMGNsCJOov",
+        "outputId": "4a142a5d-99fb-4629-9f71-6acc3762a8bc"
       },
       "execution_count": 83,
       "outputs": [
@@ -670,12 +683,12 @@
         "  arrange(name)"
       ],
       "metadata": {
-        "id": "4iY4r_LwJrUL",
-        "outputId": "58730e0a-52f0-44f3-e33b-439c66e901ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "4iY4r_LwJrUL",
+        "outputId": "58730e0a-52f0-44f3-e33b-439c66e901ec"
       },
       "execution_count": 81,
       "outputs": [
