--- a/homework/week-13.ipynb
+++ b/homework/week-13.ipynb
@@ -49,14 +49,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 96,
       "metadata": {
         "id": "k03Z1NKAoZrW",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 285
         },
-        "outputId": "6f6c06eb-53cb-467c-a182-4726c7dfe4f7"
+        "outputId": "3631858c-b67b-4564-961d-1bff3e7ce669"
       },
       "outputs": [
         {
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "jE9XM1LdRBOj"
       },
-      "execution_count": 94,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "1fjq5bkEp6Zv"
       },
-      "execution_count": 2,
+      "execution_count": 98,
       "outputs": []
     },
     {
@@ -156,9 +156,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 86
         },
-        "outputId": "112721d2-3bbc-4bdf-cadf-4a5a05d6baba"
+        "outputId": "3de67491-400c-444f-f5a4-db778698ec6e"
       },
-      "execution_count": 93,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "display_data",
@@ -256,9 +256,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "b1eefbc0-5538-426a-c1c7-efc6177a4cb6"
+        "outputId": "aee695af-083a-41ef-903c-9db5cc8af93f"
       },
-      "execution_count": 42,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "display_data",
@@ -302,9 +302,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "cd59618e-be04-4e69-8204-6af785199bef"
+        "outputId": "5549b475-cac8-4754-b189-1cf080214443"
       },
-      "execution_count": 43,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "display_data",
@@ -351,9 +351,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "5fea7990-4986-4723-b863-488a216eecab"
+        "outputId": "6e33f0b6-3f83-4857-d29d-1cbf7f0092b5"
       },
-      "execution_count": 44,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "display_data",
@@ -416,9 +416,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 412
         },
-        "outputId": "cac6bfcc-ad7a-4cd6-e0c6-caa9b6263807"
+        "outputId": "a4b6d2f6-c990-4ab9-cd78-73090af975e1"
       },
-      "execution_count": 90,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "display_data",
@@ -487,9 +487,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 192
         },
-        "outputId": "b92f42d0-f815-462d-d9ba-17b9704ba83c"
+        "outputId": "a4137556-94f2-4701-8905-bfe8f0dbfd57"
       },
-      "execution_count": 65,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "display_data",
@@ -533,9 +533,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 161
         },
-        "outputId": "955c198a-2714-41d8-c03e-c86de20cb2b2"
+        "outputId": "c037ab0b-6030-4777-8068-ab7eac9952ca"
       },
-      "execution_count": 89,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "display_data",
@@ -590,10 +590,24 @@
         "library(tidyverse)"
       ],
       "metadata": {
-        "id": "yTMLzrxS0F4u"
+        "id": "yTMLzrxS0F4u",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "597bfce5-625d-4faa-f119-65cd2c89001d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -606,9 +620,9 @@
           "height": 599
         },
         "id": "wjCMGNsCJOov",
-        "outputId": "4a142a5d-99fb-4629-9f71-6acc3762a8bc"
+        "outputId": "f89847c7-159c-4654-89d7-43c9a2d3baf0"
       },
-      "execution_count": 83,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "display_data",
@@ -688,9 +702,9 @@
           "height": 1000
         },
         "id": "4iY4r_LwJrUL",
-        "outputId": "58730e0a-52f0-44f3-e33b-439c66e901ec"
+        "outputId": "c0897115-35b9-4be5-ab75-dbc9cb2814ba"
       },
-      "execution_count": 81,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "display_data",
