--- a/homework/week-13.ipynb
+++ b/homework/week-13.ipynb
@@ -102,7 +102,7 @@
       "cell_type": "code",
       "source": [
         "# I'm not sure if this is just the default but just in case: For all the vectors in this section and the next,\n",
-        "# but the vectors on Github look like a numbered list?\n",
+        "# the vectors on Github look like a numbered list?\n",
         "# On the colab notebook, it comes out as a regular vector so I just wanted to leave a note just in case."
       ],
       "metadata": {
