--- a/homework/week-11.ipynb
+++ b/homework/week-11.ipynb
@@ -53,20 +53,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 18,
       "metadata": {
-        "id": "-dfq0Vo_iSi7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f521a13f-3ab0-4893-e9b4-eabe923533c8"
+        "outputId": "3572089d-f7f0-486f-a9dd-08416c682cb3",
+        "id": "k6zsDwsxR5eV"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Unfortunately, you cannot divide by zero!\n"
+            "division by zero\n"
           ]
         }
       ],
@@ -76,8 +76,9 @@
         "     val1 = 14\n",
         "     val2 = 0\n",
         "     return val1/val2\n",
-        "  except ZeroDivisionError:\n",
-        "    print(\"Unfortunately, you cannot divide by zero!\")\n",
+        "  except Exception as err:\n",
+        "    print(err)\n",
+        "\n",
         "\n",
         "throw_me_an_error1()"
       ]
@@ -124,9 +125,11 @@
         "    try:\n",
         "      response = requests.get('https://ids.pods.uvarc.io/guid')\n",
         "      body = json.loads(response.text)\n",
-        "      return \"Your request has been completed, \" + body['id']\n",
-        "    except MissingSchema:\n",
+        "      print( f\"{body['id']} \")\n",
+        "    except:\n",
         "      print(\"Website is unresponsive! Please check the URL\")\n",
+        "    finally:\n",
+        "      return \"Your request has been completed \"\n",
         "\n",
         "\n",
         "Id.guid()"
@@ -135,24 +138,31 @@
         "id": "hT5B-LokmUbU",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 53
         },
-        "outputId": "9fcca120-e5e9-4a48-c570-b8119a5f3be9"
+        "outputId": "6cf5dc01-daf2-4eb5-dee7-0e2c8da6adf3"
       },
-      "execution_count": 49,
+      "execution_count": 17,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "d8167bfe-650f-4803-9996-c2bbe36cf3fb \n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'Your request has been completed, 058c8b0c-8827-4295-95c8-5b2799ef5fd8'"
+              "'Your request has been completed '"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 17
         }
       ]
     },
