--- a/homework/week-11.ipynb
+++ b/homework/week-11.ipynb
@@ -53,12 +53,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3572089d-f7f0-486f-a9dd-08416c682cb3",
+        "outputId": "27cf05c9-e46f-4aba-f615-4dce9061281d",
         "id": "k6zsDwsxR5eV"
       },
       "outputs": [
@@ -71,7 +71,7 @@
         }
       ],
       "source": [
-        "def throw_me_an_error1():\n",
+        "def throw_me_an_error():\n",
         "  try:\n",
         "     val1 = 14\n",
         "     val2 = 0\n",
@@ -80,7 +80,7 @@
         "    print(err)\n",
         "\n",
         "\n",
-        "throw_me_an_error1()"
+        "throw_me_an_error()"
       ]
     },
     {
@@ -140,15 +140,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 53
         },
-        "outputId": "6cf5dc01-daf2-4eb5-dee7-0e2c8da6adf3"
+        "outputId": "f0c2ea70-a1be-48d6-ec5b-cc5d119fbca9"
       },
-      "execution_count": 17,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "d8167bfe-650f-4803-9996-c2bbe36cf3fb \n"
+            "7bdbb2b6-78eb-46f2-99f1-3dec79dcebdb \n"
           ]
         },
         {
@@ -162,7 +162,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 24
         }
       ]
     },
